@@ -1,3 +1,5 @@
+HEAD
+	+ Added helper script to improve crash reports
 3.2.11
 	+ Enhanced Lock to have exclusive lock with blocking timeout
 	+ Added redirection on no parameters support to CGIs
